Constructing the base of the web

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ author: Ignacio del Corro (cxto)
 twitter:
   username: cxtochli
   card: Something
-logo: /assets/img/smile.png
+logo: /assets/img/android-chrome-192x192.png
 social:
   name: Ignacio del Corro
   links:
