--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -35,13 +35,13 @@ skills: # Remove to hide the section
 
 
 social:
-  email: ignaciodelcorro21a@gmail.com
+  email: cxto21h@gmail.com
   orcid: 
   scholar:
   publons: 
   research_gate: 
   dblp:  # Url
-  semantic_scholar:  https://www.linkedin.com/in/ignacio-del-corro-73824b247/# URL
+  semantic_scholar:  https://www.linkedin.com/in/ignacio-del-corro-73824b247 # URL
   linkedin:  # ignaciodelcorro 
   github: cxto21
   gitlab: cxto21
